# SvEngine

./: .gitignore  .gitmodules  CMakeLists.txt  PacketDefine.json  README.md  SvEngine.sln  generate.py
.github/workflows/: cmake-single-platform.yml
Connector/CSharp/: CSharp.csproj  Connector.cs  Message.cs  Packet.cs  Session.cs
Connector/ConnectorPlusPlus/: ConnectorPlusPlus.vcxproj  ConnectorPlusPlus.vcxproj.filters
Connector/ConnectorSharp/: Connector.cs  ConnectorSharp.csproj  Packet.cs
DummyClient/: DummyClient.csproj  Program.cs
SvEngine/: .gitmodules  JobSerializer.cpp  JobSerializer.hpp  SvEngine.vcxproj  SvEngine.vcxproj.filters
SvEngine/PCH/: pch.cpp  pch.h
SvEngine/include/: CoreHeader.hpp  Engine.hpp  Point.hpp  Vector.hpp
SvEngine/src/: Engine.cpp  PacketHandler.cpp  Point.cpp  Vector.cpp  main.cpp
TestServer/: ServerPacketHandler.cpp  TestServer.vcxproj  TestServer.vcxproj.filters  main.cpp
TestServer/PCH/: pch.h
TestServer/TestServer/: GameSession.cpp  GameSession.hpp  Player.cpp  Room.cpp  Room.hpp
TestServer/content/: Player.hpp  Room.cpp  Room.hpp
TestServer/define/: Enum.json  Protocol.json  Struct.json
TestServer/main/: GameSession.hpp  ServerPacketHandler.cpp  main.cpp
TestServer/util/: ObjectUtils.cpp  ObjectUtils.hpp
include/: Client.hpp  Listener.hpp  Packet.hpp  Server.hpp  packet.hpp
include/core/: Client.hpp  Engine.hpp  Packet.hpp  Server.hpp  Session.hpp
include/util/: Console.hpp
src/: Client.cpp  Listener.cpp  Packet.cpp  Server.cpp  dummyClient.cpp  main.cpp
src/core/: Client.cpp  Engine.cpp  Packet.cpp  Server.cpp  Session.cpp
src/util/: Console.cpp
tools/: PacketDefine.json  define.json  generate.py
(+84 files in other folders)
